fix fireball-x/dev#525, use pre-wrap instead of pre-line for console log

--- a/elements/fire-console/console-detail.styl
+++ b/elements/fire-console/console-detail.styl
@@ -14,7 +14,7 @@
     user-select: initial
 
     cursor: text
-    white-space: pre-line
+    white-space: pre-wrap
     margin: 0px
 
     &::selection {
